--- a/Changes
+++ b/Changes
@@ -7,5 +7,8 @@ Revision history for Perl extension Filesys::Notify::KQueue
 0.03    Sat Sep 24 2011
         - fixed default timeout.
         - write pod.
-0.04    Sat Oct 20 2011
+0.04    Thu Oct 20 2011
         - fixed test dependency. (thanks ANDK)
+0.05    Thu Oct 20 2011
+        - build_require to test_require.
+        - fixed a day of the week in Changes.
