Import of KARUPA/Filesys-Notify-KQueue-0.07 from CPAN.
gitpan-cpan-distribution: Filesys-Notify-KQueue
gitpan-cpan-version:      0.07
gitpan-cpan-path:         KARUPA/Filesys-Notify-KQueue-0.07.tar.gz
gitpan-cpan-author:       KARUPA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -20,3 +20,5 @@ Revision history for Perl extension Filesys::Notify::KQueue
         - fixed spell miss.
         - coding style is changed a little.
         - not import File::Find's export functions.
+0.07    Sun Dec 11 2011
+        - add t::Util to MANIFEST.(oops)
